# ledge

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  about.hbs  about.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  performance.yml  problem_instance.yml
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
benchmarks/: README.md
benchmarks/adapters/: Cargo.toml
benchmarks/adapters/src/: clarabel_adapter.rs  convert.rs  ledge_adapter.rs  lib.rs  osqp_adapter.rs  protocol.rs
benchmarks/adapters/tests/: adapters.rs
benchmarks/results/2026-07/: README.md  samples.csv  summary.md
benchmarks/results/2026-07-batch/: README.md  samples-serial.csv  samples.csv
benchmarks/results/2026-07-l1/: README.md  samples.csv  summary.md
benchmarks/results/2026-07-over-relaxation/: README.md  samples.csv  summary.md
benchmarks/results/2026-07-workspace/: README.md  samples.csv  summary.md
crates/ledge/: Cargo.toml
crates/ledge-core/: Cargo.toml
crates/ledge-core/benches/: solver.rs
crates/ledge-core/src/: batch.rs  benchmark.rs  certificate.rs  generator.rs  kkt.rs  lib.rs  linalg.rs  matrix.rs  polish.rs  portfolio.rs  problem.rs  scaling.rs  sequence.rs  serde_support.rs  solver.rs  workspace.rs
crates/ledge-core/tests/: batch.rs  certificate.rs  generator.rs  l1.rs  polish.rs  portfolio.rs  proptest_kkt.rs  scaling.rs  sequence.rs  serde.rs  solver.rs  templates.rs  tracking.rs  workspace.rs
crates/ledge/examples/: batch.rs  rebalance.rs  sequence.rs  synthetic.rs
crates/ledge/src/: lib.rs
docs/: DECISIONS.md  OPEN_CORE.md  PLAN.md  PUBLIC_RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY_AUDIT.md  SMOKE_TIMINGS.md  algorithm.md  cvxpy_migration.md  factor_structure_note.md
docs/assets/: README.md  terminal-demo.json
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md  visual-tour.md
docs/book/src/guide/: constraints.md  diagnostics.md  migration.md  serialization.md  turnover.md
docs/book/src/reference/: api.md  benchmarks.md  design.md  tuning.md
docs/book/src/tutorial/: batch.md  installation.md  quickstart-python.md  quickstart-rust.md  rolling.md
docs/examples/: README.md  rolling_backtest.py
python/: Cargo.toml  README.md  THIRD_PARTY_LICENSES.html  pyproject.toml
python/examples/: rebalance.py  rolling.py
python/ledge/: __init__.py
python/src/: lib.rs
python/tests/: test_api.py  test_batch.py  test_certificates.py  test_l1.py  test_migration_guide.py  test_reference.py  test_sequence.py  test_serialization.py  test_templates.py  test_tracking.py
scripts/: check_open_core.sh  generate_demo_assets.py  generate_third_party_licenses.sh  smoke_timings.sh
