[workspace]
members = ["crates/ledge-core", "crates/ledge", "python", "benchmarks/adapters"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
publish = true
rust-version = "1.83"
authors = ["The Ledge Authors"]
repository = "https://github.com/Jiangki/ledge"
homepage = "https://github.com/Jiangki/ledge"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Public names remain explicit when re-exported from private implementation
# modules, and generator dimensions are validated far below f64's exact range.
module_name_repetitions = "allow"
cast_precision_loss = "allow"
too_many_lines = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
